--- a/palindroma/index.html
+++ b/palindroma/index.html
@@ -5,10 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palindroma</title>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css'
+        integrity='sha512-b2QcS5SsA8tZodcDtGRELiGv5SaKSk1vDHDaQRda0htPYWZ6046lr3kJ5bAAQdpV2mmA/4v0wQF9MyU6/pDIAg=='
+        crossorigin='anonymous' />
 </head>
 
 <body>
-
+    <form action="">
+        <input id="input-text" type="text">
+        <button id="button">Controlla</button>
+        <p id="result" class="d-none"></p>
+    </form>
 
     <script src="js/script.js"></script>
 </body>
