--- a/palindroma/index.html
+++ b/palindroma/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <form action="">
-        <input id="input-text" type="text">
+        <input id="input-text" type="text" required>
         <button id="button">Controlla</button>
         <p id="result" class="d-none"></p>
     </form>
